@@ -112,6 +112,7 @@ ReturnTypeEqualsReturnType (vacallReturnTypeInfo *a, vacallReturnTypeInfo *b)
 #define GSI_MAP_RETAIN_VAL(M, X)
 #define GSI_MAP_RELEASE_KEY(M, X)
 #define GSI_MAP_RELEASE_VAL(M, X)
+#define	GSI_MAP_NOCLEAN	1
 
 #include <base/GSIMap.h>
 
