@@ -56,6 +56,7 @@
 #define	GSI_MAP_RELEASE_VAL(M, X)	
 #define	GSI_MAP_HASH(M, X)	[(X).obj hash]
 #define	GSI_MAP_EQUAL(M, X,Y)	[(X).obj isEqualToString: (Y).obj]
+#define	GSI_MAP_NOCLEAN	1
 
 #include <base/GSIMap.h>
 
